package de.teamshrug.scooterms;
/**
 * The enum Status consists of these types: ready, lowonbattery, inuse, charging, damaged, maintenance. Every Scooter can change his 'Status' to a different one.
 */
public enum Status
{
    ready,lowonbattery,inuse,charging,damaged,maintenance
}
